# goit-markup-hw-06

./: index.html  portfolio.html  pyproject.toml
css/: styles.css
